clickable leaderboard rows

--- a/public/index.html
+++ b/public/index.html
@@ -146,7 +146,7 @@
                                             <TH>Username</TH>
                                             <TH>Medals</TH>
                                             <TH>Wins</TH>
-                                            <TH>Losses</TH>
+                                            <TH>Win Rate</TH>
                                         </TR>
                                     </THEAD>
                                     <TBODY ID="lb-tablebody">
