spectator mode menu

--- a/public/index.html
+++ b/public/index.html
@@ -267,6 +267,13 @@
                     <DIV CLASS="togglelb-bg"></DIV>
                     <DIV ID="togglelb-inner"><I CLASS="fa fa-angle-double-left"></I></DIV>
                 </DIV>
+                <DIV CLASS="spectatingbar" ID="spectatingbar">
+                    <DIV CLASS="spectatingbar-bg"></DIV>
+                    <DIV CLASS="spec-inner">
+                        <DIV CLASS="spec-title"><I CLASS="fa fa-eye"></I> Spectating game</DIV>
+                        <BUTTON CLASS="qc-button end-red spec-leave" ONCLICK="leavegame()">Exit</BUTTON>
+                    </DIV>
+                </DIV>
                 <!-- powerups bar -->
                 <DIV CLASS="powerupbar">
                     <DIV CLASS="powerup-label">Powerups</DIV>
