--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,7 @@
         <SCRIPT>
             const hostname = "<%= host_name %>";
             const prod = "<%= prod %>";
+            const timeoutDuration = <%= timeoutDuration %>;
         </SCRIPT>
 
         <SCRIPT TYPE="text/javascript" SRC="./js/index.js"></SCRIPT>
