--- a/public/tutorial.html
+++ b/public/tutorial.html
@@ -3,8 +3,8 @@
     <HEAD>
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <LINK REL="stylesheet" HREF="./css/style.css">
-        <LINK REL="stylesheet" HREF="./css/tutorial.css">
+        <LINK REL="stylesheet" HREF="../css/style.css">
+        <LINK REL="stylesheet" HREF="../css/tutorial.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
         <meta name="title" content="Emblitz | Tutorial">
@@ -14,14 +14,14 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <meta name="language" content="en">
 
-        <link rel="icon" href="./images/icon.png">
+        <link rel="icon" href="../images/icon.png">
         <TITLE>Emblitz | Tutorial</TITLE>
     </HEAD>
     <BODY>
         <DIV CLASS="container t-container">
-            <A HREF="../"><IMG CLASS="logoimg" SRC="./images/logo.png"></A>
+            <A HREF="../"><IMG CLASS="logoimg" SRC="../images/logo.png"></A>
             <DIV CLASS="content-text">
-                <IMG CLASS="img-fluid img-thumbnail" STYLE="float: right" SRC="./images/tutorial/imgintro.JPG">
+                <IMG CLASS="img-fluid img-thumbnail" STYLE="float: right" SRC="../images/tutorial/imgintro.JPG">
                 <DIV CLASS="row">
                     <H1 CLASS="header" STYLE="margin-left: 0px !important; margin-top: 10px; margin-bottom: 10px; text-align: left">Game Tutorial</H1>
                 </DIV>
@@ -37,9 +37,9 @@
                         <DIV CLASS="btn-group-vertical">
                             <A HREF="./tutorial/rules-and-mechanics" CLASS="btn btn-primary t-button-primary">Rules and Mechanics</A>
                             <A HREF="./tutorial/powerups" CLASS="btn btn-primary t-button-primary">Powerups</A>
-                            <A HREF="./tutorial/rules-and-mechanics" CLASS="btn btn-primary t-button-primary">Player Interactions</A>
-                            <A HREF="./tutorial/rules-and-mechanics" CLASS="btn btn-primary t-button-primary">Strategies</A>
-                            <A HREF="./tutorial/rules-and-mechanics" CLASS="btn btn-primary t-button-primary">Frequenty Asked Questions (FAQs)</A>
+                            <A HREF="./tutorial/player-interaction" CLASS="btn btn-primary t-button-primary">Player Interactions</A>
+                            <A HREF="./tutorial/strategies" CLASS="btn btn-primary t-button-primary">Strategies</A>
+                            <A HREF="./tutorial/faq" CLASS="btn btn-primary t-button-primary">Frequenty Asked Questions (FAQs)</A>
                         </DIV>
                         <P CLASS="paragraph" STYLE="margin-top: 35px;">&copy; Emblitz 2023</P>
                         <P CLASS="paragraph" STYLE="margin-top: -10px; margin-bottom: 35px;"><A HREF="privacy.html" CLASS="btn-link" TARGET="_blank">Privacy Policy</P>
