--- a/public/tutorial/player-interaction.html
+++ b/public/tutorial/player-interaction.html
@@ -39,7 +39,15 @@
 
                         <!-- begin tutorial content here -->
                         <P CLASS="paragraph">
-                            Tutorial content goes here blah blah blah...
+                            In this article, we'll learn about the multiplayer aspects of the game. These include user accounts, medals, invites, and more.<BR><BR>
+
+                            Emblitz over time has added many new player interactions, and most of this functionality stems from the addition of player accounts. These accounts allow for features such as progression, earning badges for accomplishing certain tasks, and placing on the global leaderboard in order to compete with your friends and people around the world.<BR><BR>
+
+                            Each player with an account also has a personal profile page that follows this format: https://emblitz.com/user/[username]. This link can be shared elsewhere (ie. on social media platforms) to direct others to your profile. We hope to add more profile customization options in the near future.<BR><BR>
+
+                            Another great player interaction feature that you can use is private lobbies. To create a private lobby you can click on the 'Create Private Room' button and from there you can copy the room join code next to 'Room join code:' and send it to your friends. From here your friends can copy the code you sent them, paste it in join game, and press connect to join. With these, you can invite your friends to play Emblitz with you without having to worry about random players or bots joining and interrupting your competition. You simply share the invite code with your friends and have them enter it in the “join game” input box on the main menu.<BR><BR>
+
+                            In the future, we also hope to add in-game emotes to facilitate player communication. For safety and moderation reasons, however, we do not plan on adding an in-game chat.
                         </P>
                         <!-- end tutorial content -->
 
