update tutorial pages, foward slash route filter

--- a/public/tutorial/strategies.html
+++ b/public/tutorial/strategies.html
@@ -38,7 +38,7 @@
                         <DIV STYLE="font-size: 14px; margin-bottom: 25px; margin-top: 5px;">Article 5 of 6</DIV>
 
                         <!-- begin tutorial content here -->
-                        <P CLASS="paragraph">
+                        <P CLASS="paragraph" style="margin-bottom: 25px">
                             Tutorial content goes here blah blah blah...
                         </P>
                         <!-- end tutorial content -->
