Added back my tutorial changes

--- a/public/tutorial/powerups.html
+++ b/public/tutorial/powerups.html
@@ -39,7 +39,13 @@
 
                         <!-- begin tutorial content here -->
                         <P CLASS="paragraph" style="margin-bottom: 25px">
-                            Tutorial content goes here blah blah blah...
+                            <P CLASS="paragraph">
+                                Powerups offer a strategic advantage in gameplay but are limited to one use per cooldown period. During this cooldown, the powerup button will turn gray and slowly turn green again. This will indicate that the powerup is ready to be used again so keep an eye out for the green button to indicate when the powerup is available again.<BR><BR>
+    
+                                When you select a powerup you will be given instructions on how to use said powerup at the top of the screen. This will usually involve clicking the territories you want to use the powerup on.<BR><BR>
+    
+                                The 2 powerups in the game right now are the airlift and the nuke. The airlift can be used to transport troops via a plane from one territory to another via a plane, flying over enemy defenses. The other powerup is the nuke which can be used to wipe out a majority of troops in the territory on which you use it. It is recommended that you use the nukes on large enemy troop build-ups in order to cripple your enemy’s militaries.
+                            </P>
                         </P>
                         <!-- end tutorial content -->
 
