Added some tutorial changes

--- a/public/tutorial.html
+++ b/public/tutorial.html
@@ -30,15 +30,15 @@
                         <P CLASS="paragraph" STYLE="margin-bottom: 25px;">Thanks for playing Emblitz! Emblitz is a fast-paced real time multiplayer strategy game. This terrtorial conquest game is simple, but there's a lot of strategy involved. Good luck, and have fun playing!</P>
                         <A HREF="./tutorial/rules-and-mechanics" CLASS="btn btn-outline-info" STYLE="margin-bottom: 15px;">Next: Rules and Mechanics <I CLASS="fa fa-chevron-right"></I></A>
                         <div class="progress">
-                            <div class="progress-bar progress-bar-striped" style="width: 16.7%"></div>
+                            <div class="progress-bar progress-bar-striped" style="width: 20.0%"></div>
                         </div>
-                        <DIV STYLE="font-size: 14px; margin-bottom: 25px; margin-top: 5px;">Article 1 of 6</DIV>
+                        <DIV STYLE="font-size: 14px; margin-bottom: 25px; margin-top: 5px;">Article 1 of 5</DIV>
                         <P CLASS="paragraph" STYLE="margin-bottom: 0px; font-size: 18px"><B>Contents:</B></P>
                         <DIV CLASS="btn-group-vertical">
                             <A HREF="./tutorial/rules-and-mechanics" CLASS="btn btn-primary t-button-primary">Rules and Mechanics</A>
                             <A HREF="./tutorial/powerups" CLASS="btn btn-primary t-button-primary">Powerups</A>
                             <A HREF="./tutorial/player-interaction" CLASS="btn btn-primary t-button-primary">Player Interactions</A>
-                            <A HREF="./tutorial/strategies" CLASS="btn btn-primary t-button-primary">Strategies</A>
+                            <!--<A HREF="./tutorial/strategies" CLASS="btn btn-primary t-button-primary">Strategies</A>-->
                             <A HREF="./tutorial/faq" CLASS="btn btn-primary t-button-primary">Frequenty Asked Questions (FAQs)</A>
                         </DIV>
                         <P CLASS="paragraph" STYLE="margin-top: 35px;">&copy; Emblitz 2023</P>
