--- a/public/tutorial/faq.html
+++ b/public/tutorial/faq.html
@@ -35,7 +35,7 @@
                         <div class="progress">
                             <div class="progress-bar progress-bar-striped" style="width: 100%"></div>
                         </div>
-                        <DIV STYLE="font-size: 14px; margin-bottom: 25px; margin-top: 5px;">Article 6 of 6</DIV>
+                        <DIV STYLE="font-size: 14px; margin-bottom: 25px; margin-top: 5px;">Article 5 of 5</DIV>
 
                         <!-- begin tutorial content here -->
                         <P CLASS="paragraph" style="margin-bottom: 25px">
@@ -63,8 +63,8 @@
                         <!-- end tutorial content -->
 
                         <!-- previous tutorial-->
-                        <A href="./strategies" class="btn btn-outline-secondary" STYLE="color: var(--medium); border: 1px solid var(--medium); margin-right: 20px; margin-bottom: 15px; float: left">
-                            <I CLASS="fa fa-chevron-left"></I> Previous: Strategies
+                        <A href="./player-interaction" class="btn btn-outline-secondary" STYLE="color: var(--medium); border: 1px solid var(--medium); margin-right: 20px; margin-bottom: 15px; float: left">
+                            <I CLASS="fa fa-chevron-left"></I> Previous: Player Interactions
                         </A>
 
                         <!-- next tutorial -->
