--- a/public/tutorial/player-interaction.html
+++ b/public/tutorial/player-interaction.html
@@ -33,9 +33,9 @@
                         
                         <!-- articles progress -->
                         <div class="progress">
-                            <div class="progress-bar progress-bar-striped" style="width: 66.8%"></div>
+                            <div class="progress-bar progress-bar-striped" style="width: 80.0%"></div>
                         </div>
-                        <DIV STYLE="font-size: 14px; margin-bottom: 25px; margin-top: 5px;">Article 4 of 6</DIV>
+                        <DIV STYLE="font-size: 14px; margin-bottom: 25px; margin-top: 5px;">Article 4 of 5</DIV>
 
                         <!-- begin tutorial content here -->
                         <P CLASS="paragraph" style="margin-bottom: 25px">
@@ -55,8 +55,8 @@
                         </A>
 
                         <!-- next tutorial -->
-                        <A href="./strategies" class="btn btn-outline-info">
-                            Next: Strategies <I CLASS="fa fa-chevron-right"></I>
+                        <A href="./faq" class="btn btn-outline-info">
+                            Next: FAQs <I CLASS="fa fa-chevron-right"></I>
                         </A>
                         <P CLASS="paragraph" STYLE="margin-top: 35px;">&copy; Emblitz 2023</P>
                         <P CLASS="paragraph" STYLE="margin-top: -10px; margin-bottom: 35px; margin-bottom: 15px; float: left;"><A HREF="../privacy.html" CLASS="btn-link" TARGET="_blank">Privacy Policy</P>
