Finalized the 5.0.0 Update

--- a/public/tutorial/player-interaction.html
+++ b/public/tutorial/player-interaction.html
@@ -29,7 +29,7 @@
                 <DIV CLASS="row">
                     <DIV CLASS="col">
                         <P CLASS="paragraph" STYLE="margin-bottom: 25px;">In this article, we'll learn about the multiplayer aspects of the game. These include user accounts, medals, invites, and more.</P>
-                        <A HREF="./strategies" CLASS="btn btn-outline-info" STYLE="margin-bottom: 15px;">Next: Strategies <I CLASS="fa fa-chevron-right"></I></A>
+                        <A HREF="./faq" CLASS="btn btn-outline-info" STYLE="margin-bottom: 15px;">Next: FAQs <I CLASS="fa fa-chevron-right"></I></A>
                         
                         <!-- articles progress -->
                         <div class="progress">
