--- a/public/tutorial/powerups.html
+++ b/public/tutorial/powerups.html
@@ -40,11 +40,17 @@
                         <!-- begin tutorial content here -->
                         <P CLASS="paragraph" style="margin-bottom: 25px">
                             <P CLASS="paragraph">
-                                Powerups offer a strategic advantage in gameplay but are limited to one use per cooldown period. During this cooldown, the powerup button will turn gray and slowly turn green again. This will indicate that the powerup is ready to be used again so keep an eye out for the green button to indicate when the powerup is available again.<BR><BR>
-    
-                                When you select a powerup you will be given instructions on how to use said powerup at the top of the screen. This will usually involve clicking the territories you want to use the powerup on.<BR><BR>
-    
-                                The 2 powerups in the game right now are the airlift and the nuke. The airlift can be used to transport troops via a plane from one territory to another via a plane, flying over enemy defenses. The other powerup is the nuke which can be used to wipe out a majority of troops in the territory on which you use it. It is recommended that you use the nukes on large enemy troop build-ups in order to cripple your enemy’s militaries.
+                                Powerups offer strategic advantages in gameplay, but there is a cooldown period between uses. You can activate them using the powerup buttons on the bottom right of the screen after the cooldown period ends. The green bar on each button serves as the cooldown timer for that specific powerup. When the cooldown period ends, a red dot will appear on the button, and you can activate it again. After pushing a powerup button, follow the instructions that pop up to use the powerup.<br><br>
+
+                                <B>Airlift</B><br>
+                                <U>Type:</U> Movement<br>
+                                <U>Cooldown:</U> 20 sec.<br>
+                                The airlift allows players to move troops between any 2 territories, even if they aren’t bordering each other. This lets players funnel troops behind enemy lines, or support isolated friendly regions.<br><br>
+
+                                <B>Nuke</B><br>
+                                <U>Type:</U> Damage<br>
+                                <U>Cooldown:</U> 40 sec.<br>
+                                The nuke does catastrophic splash damage! 70% of all troops at ground zero (the territory targeted) will be wiped out, and damage decreases the further you go. If a territory has 0 troops left, it becomes neutral. Note that this powerup does FRIENDLY FIRE!
                             </P>
                         </P>
                         <!-- end tutorial content -->
