--- a/public/tutorial/player-interaction.html
+++ b/public/tutorial/player-interaction.html
@@ -16,6 +16,16 @@
 
         <link rel="icon" href="../images/icon.png">
         <TITLE>Emblitz Tutorial | Player Interaction</TITLE>
+
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-QNCVLQXQCJ"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'G-QNCVLQXQCJ');
+        </script>
     </HEAD>
     <BODY>
         <DIV CLASS="container t-container">
