--- a/public/index.html
+++ b/public/index.html
@@ -159,6 +159,24 @@
 
                         <DIV CLASS="lb-footnote">Want to join the global leaderboard? <A HREF="./login?action=register" TARGET="_blank">Make an account</A> if you haven't already and start battling to earn medals!</DIV>
 
+                        <DIV STYLE="font-size: 10px">Advertisement</DIV>
+                        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2859288291436441"
+                            crossorigin="anonymous"></script>
+                        <!-- Main menu ad -->
+                        <ins class="adsbygoogle"
+                            style="display:block"
+                            data-ad-client="ca-pub-2859288291436441"
+                            data-ad-slot="7138740914"
+                            data-ad-format="horizontal"
+                            data-full-width-responsive="true"></ins>
+                        <script>
+                            window.onload = function() {
+                                window.addEventListener("load", function() {
+                                    (adsbygoogle = window.adsbygoogle || []).push({});
+                                });
+                            };
+                        </script>
+
                         <DIV CLASS="lb-divider"></DIV>
 
                         <A HREF="./tutorial" TARGET="_blank" CLASS="ltp-link" STYLE="font-size: 20px">Game Tutorial</A> | <A HREF="./privacy" TARGET="_blank" CLASS="ltp-link" STYLE="font-size: 20px">Privacy Policy</A><BR><BR>
