--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,9 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <meta name="language" content="en">
 
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2859288291436441"
+        crossorigin="anonymous"></script>
+        
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-QNCVLQXQCJ"></script>
         <script>
@@ -23,9 +26,6 @@
 
             gtag('config', 'G-QNCVLQXQCJ');
         </script>
-
-        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2859288291436441"
-        crossorigin="anonymous"></script>
         
         <link rel="icon" href="./images/icon.png">
 
@@ -159,7 +159,7 @@
 
                         <DIV CLASS="lb-footnote">Want to join the global leaderboard? <A HREF="./login?action=register" TARGET="_blank">Make an account</A> if you haven't already and start battling to earn medals!</DIV>
 
-                        <DIV STYLE="font-size: 10px">Advertisement</DIV>
+                        <!-- <DIV STYLE="font-size: 10px">Advertisement</DIV> -->
                         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2859288291436441"
                             crossorigin="anonymous"></script>
                         <!-- Main menu ad -->
@@ -167,14 +167,10 @@
                             style="display:block"
                             data-ad-client="ca-pub-2859288291436441"
                             data-ad-slot="7138740914"
-                            data-ad-format="horizontal"
+                            data-ad-format="auto"
                             data-full-width-responsive="true"></ins>
                         <script>
-                            window.onload = function() {
-                                window.addEventListener("load", function() {
-                                    (adsbygoogle = window.adsbygoogle || []).push({});
-                                });
-                            };
+                            (adsbygoogle = window.adsbygoogle || []).push({});
                         </script>
 
                         <DIV CLASS="lb-divider"></DIV>
