--- a/public/index.html
+++ b/public/index.html
@@ -13,9 +13,6 @@
         <meta name="robots" content="index, follow">
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <meta name="language" content="en">
-
-        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2859288291436441"
-        crossorigin="anonymous"></script>
         
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-QNCVLQXQCJ"></script>
@@ -27,6 +24,9 @@
             gtag('config', 'G-QNCVLQXQCJ');
         </script>
         
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2859288291436441"
+        ></script>
+
         <link rel="icon" href="./images/icon.png">
 
         <!-- configs | put in front of js files -->
@@ -161,16 +161,16 @@
 
                         <!-- <DIV STYLE="font-size: 10px">Advertisement</DIV> -->
                         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2859288291436441"
-                            crossorigin="anonymous"></script>
+                        ></script>
                         <!-- Main menu ad -->
                         <ins class="adsbygoogle"
                             style="display:block"
                             data-ad-client="ca-pub-2859288291436441"
                             data-ad-slot="7138740914"
-                            data-ad-format="auto"
+                            data-ad-format="horizontal"
                             data-full-width-responsive="true"></ins>
                         <script>
-                            (adsbygoogle = window.adsbygoogle || []).push({});
+                                (adsbygoogle = window.adsbygoogle || []).push({});
                         </script>
 
                         <DIV CLASS="lb-divider"></DIV>
