--- a/public/index.html
+++ b/public/index.html
@@ -159,7 +159,7 @@
 
                         <DIV CLASS="lb-footnote">Want to join the global leaderboard? <A HREF="./login?action=register" TARGET="_blank">Make an account</A> if you haven't already and start battling to earn medals!</DIV>
 
-                        <DIV STYLE="font-size: 10px">Advertisement</DIV>
+                        <DIV STYLE="font-size: 13px; margin-bottom: 5px;">Advertisement</DIV>
                         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2859288291436441"
                         ></script>
                         <!-- Main menu ad -->
