--- a/public/index.html
+++ b/public/index.html
@@ -224,6 +224,22 @@
                 <BUTTON ID="startvote" CLASS="joinbutton jb_green" STYLE="margin-top: 10px;">Ready</BUTTON>
                 <BUTTON ONCLICK="exitLobby()" CLASS="joinbutton jb_gray" STYLE="margin-top: 10px; padding-left: 5px; padding-right: 5px">Back to Main Menu</BUTTON>
             </DIV>
+
+            <DIV STYLE="font-size: 13px; margin-bottom: 5px; margin: auto; margin-top: 15px; text-align: center;">Advertisement</DIV>
+            <DIV STYLE="text-align: center; margin: auto;">
+                <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2859288291436441"
+                ></script>
+                <!-- Main menu ad -->
+                <ins class="adsbygoogle"
+                    style="display:block"
+                    data-ad-client="ca-pub-2859288291436441"
+                    data-ad-slot="7138740914"
+                    data-ad-format="auto"
+                    data-full-width-responsive="true"></ins>
+                <script>
+                    (adsbygoogle = window.adsbygoogle || []).push({});
+                </script>
+            </DIV>
         </DIV>
         <DIV CLASS="gamescreen" ID="gamescreen">
             <DIV ID="player_gui">
