--- a/public/index.html
+++ b/public/index.html
@@ -237,7 +237,9 @@
                     data-ad-format="auto"
                     data-full-width-responsive="true"></ins>
                 <script>
-                    (adsbygoogle = window.adsbygoogle || []).push({});
+                    window.onload = function() {
+                        (adsbygoogle = window.adsbygoogle || []).push({});
+                    }
                 </script>
             </DIV>
         </DIV>
