--- a/public/index.html
+++ b/public/index.html
@@ -226,7 +226,7 @@
             </DIV>
 
             <DIV STYLE="font-size: 13px; margin-bottom: 5px; margin: auto; margin-top: 15px; text-align: center;">Advertisement</DIV>
-            <DIV STYLE="text-align: center; margin: auto; width: 100%; min-height: 100px; min-width: 100vw;">
+            <DIV STYLE="text-align: center; width: 100%; min-height: 100px; min-width: 100vw;">
                 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2859288291436441"
                 ></script>
                 <!-- Main menu ad -->
