--- a/public/index.html
+++ b/public/index.html
@@ -226,16 +226,15 @@
             </DIV>
 
             <DIV STYLE="font-size: 13px; margin-bottom: 5px; margin: auto; margin-top: 15px; text-align: center;">Advertisement</DIV>
-            <DIV STYLE="text-align: center; width: 100%; min-height: 100px; min-width: 100vw;">
+            <DIV STYLE="text-align: center; width: 100%; min-height: 100px; min-width: 100vw; display: block;">
                 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2859288291436441"
-                ></script>
-                <!-- Main menu ad -->
+                crossorigin="anonymous"></script>
+                <!-- lobby ad 1 -->
                 <ins class="adsbygoogle"
-                    style="display:block"
-                    data-ad-client="ca-pub-2859288291436441"
-                    data-ad-slot="7138740914"
-                    data-ad-format="auto"
-                    data-full-width-responsive="true"></ins>
+                        style="display:block"
+                        data-ad-client="ca-pub-2859288291436441"
+                        data-ad-slot="6903292412"
+                        data-full-width-responsive="true"></ins>
                 <script>
                     window.addEventListener("load", function() {
                         (adsbygoogle = window.adsbygoogle || []).push({});
