hide advertisement warning if ads are blocked

--- a/public/index.html
+++ b/public/index.html
@@ -134,6 +134,20 @@
                             <BR>
                         </DIV>
 
+                        <DIV STYLE="font-size: 13px; margin-bottom: 5px;" CLASS="ad-warning">Advertisement</DIV>
+                        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2859288291436441"
+                        ></script>
+                        <!-- Main menu ad -->
+                        <ins class="adsbygoogle"
+                            style="display:block"
+                            data-ad-client="ca-pub-2859288291436441"
+                            data-ad-slot="7138740914"
+                            data-ad-format="horizontal"
+                            data-full-width-responsive="true"></ins>
+                        <script>
+                                (adsbygoogle = window.adsbygoogle || []).push({});
+                        </script>
+
                         <!-- leaderboard -->
                         <DIV CLASS="lb-divider"></DIV>
                         
@@ -159,7 +173,7 @@
 
                         <DIV CLASS="lb-footnote">Want to join the global leaderboard? <A HREF="./login?action=register" TARGET="_blank">Make an account</A> if you haven't already and start battling to earn medals!</DIV>
 
-                        <DIV STYLE="font-size: 13px; margin-bottom: 5px;">Advertisement</DIV>
+                        <DIV STYLE="font-size: 13px; margin-bottom: 5px;" CLASS="ad-warning">Advertisement</DIV>
                         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2859288291436441"
                         ></script>
                         <!-- Main menu ad -->
@@ -225,10 +239,10 @@
                 <BUTTON ONCLICK="exitLobby()" CLASS="joinbutton jb_gray" STYLE="margin-top: 10px; padding-left: 5px; padding-right: 5px">Back to Main Menu</BUTTON>
             </DIV>
 
-            <DIV STYLE="font-size: 13px; margin-bottom: 5px; margin: auto; margin-top: 15px; text-align: center;">Advertisement</DIV>
+            <DIV STYLE="font-size: 13px; margin-bottom: 5px; margin: auto; margin-top: 15px; text-align: center;" CLASS="ad-warning">Advertisement</DIV>
             <DIV STYLE="text-align: center; width: 100%; min-height: 100px; min-width: 100vw; display: block;">
                 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2859288291436441"
-                crossorigin="anonymous"></script>
+                ></script>
                 <!-- lobby ad 1 -->
                 <ins class="adsbygoogle"
                         style="display:block"
