fix mobile ad placement

--- a/public/index.html
+++ b/public/index.html
@@ -135,7 +135,7 @@
                         </DIV>
 
                         <DIV STYLE="font-size: 13px; margin-bottom: 5px;" CLASS="ad-warning">Advertisement</DIV>
-                        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2859288291436441"
+                        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2859288291436441" style="height: 60px"
                         ></script>
                         <!-- Main menu ad -->
                         <ins class="adsbygoogle"
