fix mobile ad placement

--- a/public/index.html
+++ b/public/index.html
@@ -140,7 +140,7 @@
                                     display: none;
                                 }
                                 .ad-warning-one {
-                                    display: none;
+                                    display: none !important;
                                 }
                             }
                         </style>
