--- a/public/index.html
+++ b/public/index.html
@@ -137,7 +137,7 @@
                         <style>
                             @media (max-width: 550px) {
                                 .ad-type-responsive {
-                                    display: none;
+                                    display: none !important;
                                 }
                                 .ad-warning-one {
                                     display: none !important;
