fix adblock detection

--- a/public/index.html
+++ b/public/index.html
@@ -23,9 +23,6 @@
 
             gtag('config', 'G-QNCVLQXQCJ');
         </script>
-        
-        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2859288291436441"
-        ></script>
 
         <link rel="icon" href="./images/icon.png">
 
@@ -42,6 +39,9 @@
         <SCRIPT TYPE="text/javascript" SRC="../js/xpLevelCalc.js"></SCRIPT>
         <SCRIPT TYPE="text/javascript" SRC="../js/loadingScreen.js"></SCRIPT>
         <SCRIPT TYPE="text/javascript" SRC="../js/powerups.js"></SCRIPT>
+
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2859288291436441"
+        onerror="detectAdBlock()"></script>
 
         <TITLE>Emblitz | Multiplayer Strategy Game</TITLE>
     </HEAD>
