--- a/public/index.html
+++ b/public/index.html
@@ -352,6 +352,15 @@
                         </DIV>
                         <DIV CLASS="powerup-notify" ID="airlift-notify-icon"></DIV>
                     </BUTTON>
+                    <!-- supply drop -->
+                    <BUTTON CLASS="powerup-btn" ID="supplydrop-powerup" TITLE="Supply Drop" ONCLICK="supplyDrop()">
+                        <DIV CLASS="powerup-nooverflow">
+                            <DIV CLASS="powerup-btn-bg"></DIV>
+                            <DIV CLASS="powerup-recharge"></DIV>
+                            <IMG SRC="./images/assets/supplybuttonicon.svg">
+                        </DIV>
+                        <DIV CLASS="powerup-notify" ID="supplydrop-notify-icon"></DIV>
+                    </BUTTON>
                 </DIV>
                 <DIV CLASS="endscreen" ID="endscreen">
                     <DIV CLASS="endscreen-bg"></DIV>
