add music processor (mostly works)

--- a/public/index.html
+++ b/public/index.html
@@ -8,11 +8,17 @@
         <link rel="canonical" href="https://www.emblitz.com">
 
         <meta name="title" content="Emblitz | Multiplayer Strategy Game">
+        <meta name="og:title" content="Emblitz | Multiplayer Strategy Game">
         <meta name="description" content="Emblitz is an online real-time strategy game. Fight other players from around the world for control over a variety of maps!">
+        <meta name="og:description" content="Emblitz is an online real-time strategy game. Fight other players from around the world for control over a variety of maps!">
         <meta name="keywords" content="emblitz, pvp, real time, game, video game, videogame, conquest, domination, multiplayer, strategy, battle">
         <meta name="robots" content="index, follow">
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <meta name="language" content="en">
+        <meta name="og:image" content="https://emblitz.com/images/emblitzimage.png">
+        <meta name="twitter:image" content="https://emblitz.com/images/emblitzimage.png">
+        <meta itemprop="image" content="https://emblitz.com/images/emblitzimage.png">
+        <meta name="theme-color" content="#f01a00">
         
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-QNCVLQXQCJ"></script>
@@ -39,6 +45,7 @@
         <SCRIPT TYPE="text/javascript" SRC="../js/xpLevelCalc.js"></SCRIPT>
         <SCRIPT TYPE="text/javascript" SRC="../js/loadingScreen.js"></SCRIPT>
         <SCRIPT TYPE="text/javascript" SRC="../js/powerups.js"></SCRIPT>
+        <SCRIPT TYPE="text/javascript" SRC="../js/audiomanager.js"></SCRIPT>
 
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2859288291436441"
         onerror="detectAdBlock()"></script>
@@ -56,19 +63,7 @@
         <DIV CLASS="lobbyscreen" ID="lobbyscreen">
             <DIV CLASS="homebackgroundcontainer"><DIV CLASS="homebackground"></DIV></DIV>
             <DIV CLASS="tutorial-tooltip" ID="t-tooltip">Hello! Would you like a quick tutorial of the game? You can also access it through the "game tutorial" button on this page.<A HREF="./tutorial" ONCLICK="hidetutorialtt()" STYLE="font-size: 20px" TARGET="_blank" CLASS="tooltip-link">Sure!</A><BUTTON ONCLICK="hidetutorialtt();" CLASS="tooltip-link-second">No thanks</BUTTON></DIV>
-            <!-- WORK IN PROGRESS! Sorry!
-            <DIV CLASS="tutorial-area">
-                <DIV CLASS="ta-bg"></DIV>
-                <DIV CLASS="ta-inner">
-                    <DIV CLASS="ta-img"><IMG ID="ta-img" SRC="./images/simpletutorial/2.png"></DIV>
-                    <DIV CLASS="ta-text" ID="ta-text">
-                        <DIV CLASS="ta-pbar"><DIV CLASS="ta-pbar-inner"></DIV></DIV>
-                        <DIV CLASS="ta-text-content">The deploy phase is the first game phase and lasts 10 seconds. You'll be able to claim any unselected territory and change it if needed until the timer runs out. All players begin with 10 troops.</DIV>
-                        <BUTTON CLASS="ta-ctrl-right">Next Slide <I CLASS="fa fa-chevron-right"></I></BUTTON>
-                    </DIV>
-                </DIV>
-            </DIV>
-            -->
+
             <DIV CLASS="socials">
                 <DIV CLASS="socials-bg"></DIV>
                 <DIV CLASS="socials-discord">
